Finished models, forms, html

--- a/custom_user/templates/index.html
+++ b/custom_user/templates/index.html
@@ -6,6 +6,11 @@
     <title>Under the Microscope</title>
 </head>
 <body>
-    <h1>Qu33n B's Custom User</h1>
+    <h1>Qu33n B's Custom User Homepage</h1>
+    
+
+
+
+    <button><a href='/signout/'>Logout</a></button>
 </body>
 </html>
