--- a/custom_user/templates/index.html
+++ b/custom_user/templates/index.html
@@ -8,8 +8,10 @@
 <body>
     <h1>Qu33n B's Custom User Homepage</h1>
     
+    <p>{{user.display_name}}</p>
+    <p>{{user.username}}</p>
 
-
+    <p>{{user.settings.AUTH_USER_MODEL}}</p>
 
     <button><a href='/signout/'>Logout</a></button>
 </body>
