Displays output value of settings.AUTH_USER_MODEL

--- a/custom_user/templates/index.html
+++ b/custom_user/templates/index.html
@@ -11,7 +11,7 @@
     <p>{{user.display_name}}</p>
     <p>{{user.username}}</p>
 
-    <p>{{user.settings.AUTH_USER_MODEL}}</p>
+    <p>{{info}}</p>
 
     <button><a href='/signout/'>Logout</a></button>
 </body>
